# raytracer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
output/: render.ppm
scenes/: default.json  dna.json  optimus_prime.json  soccer_ball.json  taj_mahal.json
src/: main.cpp
src/acceleration/: bvh.cpp  bvh.h
src/core/: camera.cpp  camera.h  color.h  ray.h  utils.h  vec3.h
src/geometry/: aabb.h  csg.cpp  csg.h  cuboid.cpp  cuboid.h  cylinder.cpp  cylinder.h  hittable.h  hittable_list.cpp  hittable_list.h  plane.cpp  plane.h  sphere.cpp  sphere.h  toroid.cpp  toroid.h  torus.cpp  torus.h  triangle.cpp  triangle.h
src/materials/: dielectric.cpp  dielectric.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h  opaque_material.cpp  opaque_material.h
src/renderer/: image.cpp  image.h  renderer.cpp  renderer.h
src/scene/: scene_loader.cpp  scene_loader.h
src/textures/: checker.cpp  checker.h  solid_color.cpp  solid_color.h  texture.h  uv_checker.cpp  uv_checker.h
